lowered JVM memory consumption for benchmarks to allow running on hosts with 4Gb of RAM installed