@@ -93,7 +93,6 @@
                             <jvmArg>-Xms1g</jvmArg>
                             <jvmArg>-Xmx1g</jvmArg>
                             <jvmArg>-Xss1m</jvmArg>
-                            <jvmArg>-XX:MaxPermSize=256m</jvmArg>
                             <jvmArg>-XX:+TieredCompilation</jvmArg>
                         </jvmArgs>
                     </configuration>
@@ -119,7 +118,7 @@
                     <configuration>
                         <runOrder>alphabetical</runOrder>
                         <forkMode>always</forkMode>
-                        <argLine>-server -Xms4g -Xmx4g -Xss1m -XX:MaxPermSize=256m -XX:NewRatio=1 -XX:+TieredCompilation -XX:+UseParallelGC -XX:+UseNUMA -XX:+UseCondCardMark</argLine>
+                        <argLine>-server -Xms3g -Xmx3g -Xss1m -XX:NewRatio=1 -XX:+TieredCompilation -XX:+UseParallelGC -XX:+UseNUMA -XX:+UseCondCardMark</argLine>
                     </configuration>
                 </plugin>
             </plugins>
